feat(management-api): allow PATCH flows on v4 HTTP Proxy APIs
Why: DevOps callers automating Gravitee through mAPI today have to resend
the entire API definition just to tweak a single flow step. Lifting flows
into the PATCH allow-list lets callers add, remove, reorder, or replace
flows with a minimal targeted payload while the existing validator path
enforces semantic correctness.